[tool.poetry]
name = "pypi-index-builder"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pypi_index_builder"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.5"
strictyaml = "^1.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
