[project]
name = "pypi-index-builder"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "jinja2>=3.1.6,<4",
    "strictyaml>=1.7.3,<2",
    "pydantic>=2.11.9,<3",
    "pydantic-settings>=2.11.0,<3",
    "loguru>=0.7.3,<0.8",
]
